--- a/hugo/themes/aciklab-hugo/layouts/partials/header.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/header.html
@@ -2,7 +2,7 @@
 {{ $navbar := $params.navbar }}
 <header id="header">
     <div class="container">
-        <nav class="navbar navbar-expand-lg py-3 px-0">
+        <nav class="row navbar navbar-expand-lg py-3 px-0">
             <a href="{{ $params.navbarlogo.link | relURL }}" class="d-flex flex-lg-row flex-column navbar-brand">
                 {{ range $i, $v := $params.navbarlogo }}
                 <img src="{{ printf "/images/%s" .image | relURL }}" alt="{{ $params.description }}"
