--- a/hugo/themes/aciklab-hugo/layouts/partials/brands.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/brands.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row d-flex">
+    <div class="row d-md-flex d-none">
         <div class="col-md-4 align-items-center justify-content-center">
             <img src="/images/bottom-logo-1.png" alt="" class="img-fluid" style="margin-top: 55px;">
         </div>
