--- a/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
@@ -48,5 +48,8 @@
           dropdownMenu.parent().toggleClass("show");
       }
     });
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
   });    
 </script>
