--- a/hugo/themes/aciklab-hugo/layouts/_default/skeleton.html
+++ b/hugo/themes/aciklab-hugo/layouts/_default/skeleton.html
@@ -1,4 +1,7 @@
 {{ define "main" }}
 {{ partial "nav.html" . }}
 {{ .Content}}
+{{ if eq .Params.title "Eğitimler" }}
+{{ partial "brands.html" . }}
+{{ end }}
 {{ end }}
