--- a/hugo/themes/aciklab-hugo/layouts/partials/hero.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/hero.html
@@ -13,7 +13,7 @@
                         <div class="row mt-4 mb-5">
                             {{ range $v.logos }}
                             <div class="col-lg-3 col-12">
-                                <img src="{{ printf "/images/%s" .image | relURL }}" class="img-fluid">
+                                <img src="{{ printf "/images/%s" .image | relURL }}" class="img-fluid d-lg-block d-none">
                             </div>
                             {{ end }}
                         </div>
@@ -21,13 +21,13 @@
                         {{ if $v.buttons }}
                         <div>
                             {{ range $v.buttons }}
-                            <a href="{{ .link | relURL }}" class="btn btn-primary btn-lg btn-color-low">{{ .text }}</a>
+                            <a href="{{ .link | relURL }}" class="btn btn-primary btn-lg btn-color-low ">{{ .text }}</a>
                             {{ end }}
                         </div>
                         {{ end }}
                     </div>
                     {{ if $v.image }}
-                    <div class="col-lg-6 order-1 order-lg-2 hero-img p-0" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-6 order-1 order-lg-2 hero-img p-0 text-center" data-aos="zoom-in" data-aos-delay="200">
                         <picture>
                             <source srcset="{{ printf "/images/%s.webp"  $v.image | relURL }}" type="image/webp">
                             <img src="{{ printf "/images/%s.png"  $v.image | relURL }}" class="img-fluid" alt="">
