--- a/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
@@ -51,5 +51,34 @@
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
     })
-  });    
+
+    
+  });   
+  $(document).ready( function () {
+    $('#table1').DataTable({
+      language: {
+        url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Turkish.json'
+      }
+    });
+    $('#table2').DataTable({
+      language: {
+        url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Turkish.json'
+      }
+    });
+    $('#table3').DataTable({
+      language: {
+        url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Turkish.json'
+      }
+    });
+    $('#table4').DataTable({
+      language: {
+        url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Turkish.json'
+      }
+    });
+  } ); 
 </script>
+{{ if eq .Params.title "Uyumluluk" }}
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
+<script src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+{{ end }}
