--- a/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
@@ -17,5 +17,9 @@
 <li class="breadcrumb-item {{ if eq .p1 .p2 }}active{{ end }}">
     <a href="{{ .p1.Permalink }}">{{ .p1.Title }}</a>
 </li>
+{{ else }}
+<li class="breadcrumb-item {{ if eq .p1 .p2 }}active{{ end }}">
+    <a href="/haberler/">Haberler</a>
+</li>
 {{ end }}
 {{ end }}
