--- a/hugo/themes/aciklab-hugo/layouts/_default/truncated_post.html
+++ b/hugo/themes/aciklab-hugo/layouts/_default/truncated_post.html
@@ -2,7 +2,7 @@
 
 <article class="blog-post col-md-6 mb-5">
   <header>
-    <h2 class="blog-post-title" dir="auto"><a href="{{ .Permalink }}" target="_blank">{{ .Title | markdownify }}</a></h2>
+    <h2 class="blog-post-title" dir="auto"><a href="{{ .Permalink }}" >{{ .Title | markdownify }}</a></h2>
     <div class="blog-post-meta mb-3 w-100">
       <i class="fa fa-calendar mr-2"></i>
       <time {{ .Date.Format "2006-01-02T15:04:05Z07:00" | printf "datetime=%q" | safeHTMLAttr }}>
@@ -10,7 +10,7 @@
       </time>
     </div>
     <div class="blog-thumbnail">
-      <a href="{{ .Permalink }}" target="_blank">
+      <a href="{{ .Permalink }}" >
       {{ if .Params.image }}
         {{ $original := print "images/haberler/" (path.Base .Params.image) }}
         {{ $originalImg := resources.Get $original }}
@@ -26,5 +26,5 @@
     </div>
   </header>
   {{ .Summary | truncate 250 }}
-  <a href='{{ .Permalink }}' target="_blank" class="d-block mt-2 font-weight-bold"><i class="fa fa-chevron-right mr-2"></i>Devamını oku...</a>
+  <a href='{{ .Permalink }}'  class="d-block mt-2 font-weight-bold"><i class="fa fa-chevron-right mr-2"></i>Devamını oku...</a>
 </article>
