--- a/hugo/themes/aciklab-hugo/layouts/partials/head.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/head.html
@@ -10,8 +10,9 @@
     {{ end }}
     <meta
       name="description"
-      content="{{ if .Params.summary }}{{ .Params.summary }}{{ else if .Site.Params.Description }}{{ .Site.Params.Description }}{{ else }}Placeholder Description{{ end }}"
+      content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}"
     />
+    <link rel="icon" href="/fav.png" type="image/png">
     {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | minify -}}
     <style>
       {{ $style.Content | safeCSS }}
