--- a/hugo/themes/aciklab-hugo/layouts/partials/blog_posts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/blog_posts.html
@@ -5,7 +5,7 @@
             {{ .Render "truncated_post" }}
         {{ end }}
         {{ if .IsHome }}
-        <div class="col-12 text-center" onclick="window.location.href=/haberler/">
+        <div class="col-12 text-center mb-md-0 mb-5" onclick="window.location.href=/haberler/">
             <button class="btn btn-lg btn-primary btn-color-low">
                 Tüm Haberleri Görüntüleyin
             </button>
