--- a/hugo/themes/aciklab-hugo/layouts/partials/nav.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/nav.html
@@ -4,7 +4,7 @@
             {{ $currentPage := . }}
             {{ range .Site.Menus.nav }}
             <a href="{{ .URL }}"
-                class="col-lg-6 col-12 d-flex py-5 justify-content-center align-items-center block {{ if $currentPage.IsMenuCurrent "nav" . }} active{{ end }}"
+                class="big-nav-item col-lg-6 col-12 d-flex py-5 justify-content-center align-items-center block {{ if $currentPage.IsMenuCurrent "nav" . }} active{{ end }}"
                 {{ if eq .Weight 1 }}data-aos="fade-right" {{else}}data-aos="fade-left" {{end}} data-aos-delay="100">
                 <div class="col-4 text-center"><i class="fa {{.Pre}} fa-6x"></i></div>
                 <div class="col-8">
