Haberler stringi degistirildi, menu yazisi degistirildi, banner degistirildi.

--- a/hugo/themes/aciklab-hugo/layouts/_internal/opengraph.html
+++ b/hugo/themes/aciklab-hugo/layouts/_internal/opengraph.html
@@ -71,6 +71,6 @@ See: https://github.com/gohugoio/hugo/issues/5078
 {{- with .Site.Social.facebook_admin }}<meta property="fb:admins" content="{{ . }}" />{{ end }}
 
 {{- if .Params.image -}}
-<meta property="og:image" content="/images/haberler/{{ .Params.image }}"/>
+<meta property="og:image" content="/images/duyurular/{{ .Params.image }}"/>
 {{- end -}}
 
