--- a/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
@@ -19,7 +19,7 @@
 </li>
 {{ else }}
 <li class="breadcrumb-item {{ if eq .p1 .p2 }}active{{ end }}">
-    <a href="/haberler/">Haberler</a>
+    <a href="/duyurular/">Duyurular</a>
 </li>
 {{ end }}
 {{ end }}
