--- a/hugo/themes/aciklab-hugo/layouts/_default/truncated_post.html
+++ b/hugo/themes/aciklab-hugo/layouts/_default/truncated_post.html
@@ -12,7 +12,7 @@
     <div class="blog-thumbnail">
       <a href="{{ .Permalink }}" >
       {{ if .Params.image }}
-        {{ $original := print "images/haberler/" (path.Base .Params.image) }}
+        {{ $original := print "images/duyurular/" (path.Base .Params.image) }}
         {{ $originalImg := resources.Get $original }}
         {{ if $originalImg }}
             {{ $thumbnailImg := $originalImg.Resize "600x300" }}
