--- a/hugo/themes/aciklab-hugo/layouts/partials/blog_posts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/blog_posts.html
@@ -1,13 +1,13 @@
 <div class="container mt-5">
-    <div class="row {{if eq .Params.title "Haberler"}}egitim-row mt-n4{{end}}">
+    <div class="row egitim-row {{if eq .Params.title "Duyurular"}} mt-n4{{end}}">
         {{ $paginator := .Paginate (where .Site.RegularPages "Section" "in" .Site.Params.mainSections) }}
         {{ range $paginator.Pages }}
             {{ .Render "truncated_post" }}
         {{ end }}
         {{ if .IsHome }}
-        <div class="col-12 text-center mb-md-0 mb-5" onclick="window.location.href=/haberler/">
+        <div class="col-12 text-center mb-md-0 mb-5" onclick="window.location.href=/duyurular/">
             <button class="btn btn-lg btn-primary btn-color-low">
-                Tüm Haberleri Görüntüleyin
+                Tüm Duyuruları Görüntüleyin
             </button>
         </div>
         {{ else }}
