--- a/hugo/themes/aciklab-hugo/layouts/partials/nav.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/nav.html
@@ -1,3 +1,5 @@
+{{ if 0 }}
+<!-- global olarak devre dışı bırakıldı. -->
 <section id="nav" class="d-flex" style="background-color: rgb(242, 242, 242);">
     <div class="container">
         <div class="row">
@@ -16,3 +18,4 @@
         </div>
     </div>
 </section>
+{{ end }}
