--- a/hugo/themes/aciklab-hugo/layouts/_default/truncated_post.html
+++ b/hugo/themes/aciklab-hugo/layouts/_default/truncated_post.html
@@ -1,6 +1,6 @@
 {{ $dateFormat := "02/01/2006" }}
 
-<article class="blog-post col-md-6 mb-5">
+<article class="blog-post col-md-6 mb-5" data-aos="fade-up">
   <header>
     <h2 class="blog-post-title" dir="auto"><a href="{{ .Permalink }}" >{{ .Title | markdownify }}</a></h2>
     <div class="blog-post-meta mb-3 w-100">
