--- a/hugo/themes/aciklab-hugo/layouts/partials/banner.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/banner.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row banner py-3">
             <div class="container">
-                <div class="row egitim-row">
+                <div class="row egitim-row" data-aos="fade-left">
                     <div class="col-lg-8 col-12 align-items-center d-flex justify-content-start text-center text-lg-left">
                         <span>{{ $banner.text }}</span>
                     </div>
