--- a/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/breadcrumb.html
@@ -1,6 +1,6 @@
 <div class="container mt-3">
     <nav class="row">
-        <ol class="breadcrumb" style="padding-left:0; padding-right: 0; width: 100%; background: transparent;">
+        <ol class="breadcrumb" data-aos="fade-right" style="padding-left:0; padding-right: 0; width: 100%; background: transparent;">
             {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
         </ol>
     </nav>
