--- a/hugo/themes/aciklab-hugo/layouts/partials/brands.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/brands.html
@@ -1,12 +1,12 @@
-<div class="container">
-    <div class="row d-md-flex d-none">
-        <div class="col-md-4 align-items-center justify-content-center">
-            <img src="/images/bottom-logo-1.png" alt="" class="img-fluid" style="margin-top: 55px;">
+<div class="container my-4" style="z-index: 0;">
+    <div class="row d-md-flex d-none" data-aos="fade-up">
+        <div class="col-md-4 my-4">
+            <img src="/images/bottom-logo-1.png" alt="" class="img-fluid">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 my-4">
             <img src="/images/bottom-logo-2.png" alt="" class="img-fluid">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 my-4">
             <img src="/images/bottom-logo-3.png" alt="" class="img-fluid">
         </div>
     </div>
