--- a/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
@@ -57,6 +57,21 @@
     $(function () {
       $('[data-toggle="tooltip"]').tooltip();
     });
+
+    // Smooth Capalar
+    try {
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+  
+          document.querySelector(this.getAttribute("href")).scrollIntoView({
+            behavior: "smooth",
+          });
+        });
+      });
+    } catch (err) {
+      //
+    }
   });   
 </script>
 {{ if eq .Params.title "Uyumluluk" }}
