--- a/hugo/themes/aciklab-hugo/layouts/partials/hero.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/hero.html
@@ -1,6 +1,6 @@
 {{ $hero := .Site.Params.hero }}
 <section id="hero" class="pt-lg-5 pt-0 pb-5">
-    <div id="hero-carousel" class="carousel carousel-fade container slide pb-5" data-ride="carousel">
+    <div id="hero-carousel" class="carousel container slide pb-5" data-ride="carousel">
         <div class="carousel-inner row">
             {{ range $i,$v := $hero }}
             <div class="carousel-item{{ if eq $i 0}} active{{ end }}">
@@ -27,7 +27,7 @@
                         {{ end }}
                     </div>
                     {{ if $v.image }}
-                    <div class="col-lg-6 order-1 order-lg-2 hero-img p-0 text-center" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-6 order-1 order-lg-2 hero-img p-0 text-center pr-2" data-aos="zoom-in" data-aos-delay="200">
                         <img src="{{ printf "/images/%s.png"  $v.image | relURL }}" class="img-fluid" alt="">
                     </div>
                     {{ end }}
