--- a/hugo/themes/aciklab-hugo/layouts/partials/head.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/head.html
@@ -13,6 +13,7 @@
       content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}"
     />
     <link rel="icon" href="/fav.png" type="image/png">
+    <link rel="stylesheet" href="/fonts/inter.css">
     {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | minify -}}
     <style>
       {{ $style.Content | safeCSS }}
