Liman afisi guncellendi

--- a/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
+++ b/hugo/themes/aciklab-hugo/layouts/partials/scripts.html
@@ -1,10 +1,7 @@
+<script src="/scripts/popper.min.js"></script>
 <script
   src="/scripts/aciklab.bundle.js"
-></script>
-{{ if eq .Params.title "Açık Kaynak Ürün Ailesi" }}
-<script src="/scripts/popper.min.js"></script>
-{{ end }}
-<!--
+></script><!--
 <script
   src="/scripts/bootstrap.min.js"
 ></script>
